<resources>
    <string name="app_name">Big Blue Button Meetings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username Surname</string>
    <string name="nav_header_subtitle">exampleemail@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Start Meeting</string>
    <string name="menu_gallery">Join meetings</string>
    <string name="menu_slideshow">My profile</string>
    <string name="menu_about">About</string>
    <string name="editMeetingName">Enter name meeting...</string>
    <string name="Hello">Welcome,Username!</string>
    <string name="GoingToDo"> What are you going to do today?</string>
    <string name="AboutH1">About app</string>
    <string name="btn1Text">Create meeting</string>
    <string name="btn2Text">Join meeting</string>
    <string name="inputText">Type meeting name...</string>
    <string name="creator">Creator: Programer75</string>
    <string name="github">App-Github: github.com/Programer75/BBBMeetings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>