<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bbbmeetings.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.bbbmeetings.ui.history.HistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.bbbmeetings.ui.account.AccountFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.bbbmeetings.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>

</navigation>