<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="361dp"
            android:layout_height="95dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bbblogo_text"/>

        <TextView
            android:id="@+id/text_home"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:text="@string/Hello"
            android:textColor="@color/black"
            android:textSize="36dp" />

        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/GoingToDo"
            android:textSize="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/nameConf"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableBottom="@color/blue_button"
            android:hint="@string/inputText"
            android:textSize="20dp"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn1Text"
            android:enabled="false"
            android:textSize="17dp"/>
        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn2Text"
            android:enabled="false"
            android:textSize="17dp"/>


        <TextView
            android:id="@+id/infoText"
            android:layout_width="194dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="15dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>